---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: ????
  Features:
    - Added new pages:
        - Group: fluids, items, and recipes belonging to each group
        - Lab: research speed, compatible science packs, unlocked by, and placeable by
        - Recipe category: fluids, items, and recipes belonging to each recipe category
    - Added numerous properties that were previously confined to tooltips:
      - Crafter: Crafting speed
      - Fluid: Fuel value, group
      - Item: Stack size, fuel value, fuel pollution, vehicle acceleration, vehicle top speed, group
      - Recipe: Recipe category, group
    - Added settings to toggle group member visibility
    - Added text search to information pages
    - Alt-clicking an ingredient or product in a quick ref window will mark it green
    - Middle-clicking an object will open that object in a new window
    - Search and information have been separated into separate GUIs
    - You can open as many information windows as you want simultaneously
  Changes:
    - Recipe time-to-craft is now displayed in a generic info table, rather than as a fake ingredient
  Bugfixes:
    - Fixed that recipe "made in" didn't account for ingredient count limits on assemblers
    - Fixed that rocket launch products were always marked as their own payload
    - Fixed that rocket launch products weren't being shown in many places due to invalid recipe categories
---------------------------------------------------------------------------------------------------
Version: 2.7.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.7.1
Date: 2021-05-03
  Bugfixes:
    - Fixed a crash when a new force was created
---------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: 2021-05-03
  Features: